# towles-tool-rs

./: .env.example  .git-blame-ignore-revs  .gitignore  .mailmap  ATTRIBUTION.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE.md  README.md  SECURITY.md  implementation-notes.md  package-lock.json  package.json  skills-lock.json  slot-setup.sh
.claude/: launch.json  settings.json
.claude-plugin/: marketplace.json
.claude/commands/: improve-app.md
.claude/hooks/: guard-better-result.sh  guard-gh-merge-strategy.sh  guard-slot-pkill.sh  guard-synthetic-input.sh  guard-task-pkill.sh  guard-time-based-ids.sh  guard-typecheck.sh  remind-simplify-code-review.sh
.claude/rules/: rust.md
.githooks/: pre-commit
.github/workflows/: ci.yml  cleanup-caches.yml  frontend.yml  nightly.yml  release.yml  security.yml
crates-cli/tt-cli/: Cargo.toml
crates-cli/tt-cli/src/: cli.rs  main.rs  ui.rs
crates-cli/tt-cli/src/commands/: agentboard.rs  agentboard_client.rs  agentboard_server.rs  agentboard_setup.rs  claude_sessions.rs  claude_settings.rs  collect.rs  config.rs  doctor.rs  gh.rs  graph.rs  install.rs  journal.rs  mcp.rs  mod.rs  slot.rs  task.rs
crates-cli/tt-cli/src/commands/agentboard_tui/: mod.rs  sessionizer.sh  view.rs
crates-cli/tt-cli/src/commands/doctor/: history.rs  mod.rs
crates-cli/tt-cli/src/commands/slot/: migrate.rs  mod.rs
crates-cli/tt-cli/tests/: agentboard_commands.rs  claude_sessions_commands.rs  collect_commands.rs  config_commands.rs  doctor_commands.rs  gh_commands.rs  graph_commands.rs  install_commands.rs  journal_commands.rs  mcp_commands.rs  slot_clean_commands.rs  slot_commands.rs  slot_migrate_commands.rs  task_clean_commands.rs  task_commands.rs
crates-cli/tt-cli/tests/common/: mod.rs
crates-tauri/tt-app/: CLAUDE.md  Cargo.toml  tauri.conf.json  wdio-capability.json
crates-tauri/tt-app/capabilities/: default.json
crates-tauri/tt-app/icons/: icon.icns
crates-tauri/tt-app/src/: agentboard.rs  claude_sessions.rs  diagnostics.rs  dictation.rs  doctor.rs  gh_actions.rs  graph.rs  ide.rs  instance_lock.rs  journal.rs  launch.rs  lib.rs  linux_desktop.rs  lsp.rs  macos_keys.rs  main.rs  mcp.rs  mcp_http.rs  preview.rs  resources.rs  resume.rs  scheduler.rs  settings.rs  shpool.rs  slack.rs  slack_socket.rs  slots.rs  store.rs  task.rs  task_explorer.rs  telemetry.rs  terminal.rs  update.rs  zellij.rs
crates/tt-agentboard/: Cargo.toml
crates/tt-agentboard/examples/: dump_state.rs
crates/tt-agentboard/src/: bridge.rs  claude_cli.rs  cleanup.rs  collapse.rs  engine.rs  env_drift.rs  folder_meta.rs  fs_notify.rs  git_info.rs  hook_http.rs  launch.rs  lib.rs  metadata.rs  metadata_http.rs  notify.rs  pane_agents.rs  persist.rs  ports.rs  procenv.rs  repo_meta.rs  repos.rs  resume.rs  session_order.rs  session_resolve.rs  sessions.rs  sidebar_width_sync.rs  task_removal.rs  task_status.rs  text.rs  themes.rs  tracker.rs  types.rs  watcher.rs  windows.rs
crates/tt-agentboard/src/tmux/: client.rs  mod.rs  provider.rs
crates/tt-agentboard/src/watchers/: amp.rs  claude_code.rs  claude_pid.rs  claude_usage.rs  codex.rs  mod.rs  opencode.rs
crates/tt-claude-code/: Cargo.toml
crates/tt-claude-code/src/: context_windows.json  cwd.rs  lib.rs  models.rs  parse.rs  prompts.rs  title.rs  types.rs  usage.rs
crates/tt-claude-sessions/: Cargo.toml
crates/tt-claude-sessions/src/: analyzer.rs  breakdown.rs  cadence.rs  graph-template.html  insights.rs  labels.rs  ledger.rs  lib.rs  parser.rs  pricing.rs  render.rs  sessions.rs  tools.rs  treemap.rs  types.rs  usage_limits.rs
crates/tt-collect/: CLAUDE.md  Cargo.toml
crates/tt-collect/src/: gh.rs  issues.rs  lib.rs  nudge.rs  prompts.rs  prs.rs  quiet_hours.rs  slack.rs  slack_socket.rs
crates/tt-config/: Cargo.toml
crates/tt-config/src/: lib.rs
crates/tt-dictate/: CLAUDE.md  Cargo.toml
crates/tt-dictate/src/: engine.rs  lib.rs  retype.rs  settings.rs
crates/tt-dictate/src/asr/: download.rs  driver.rs  mod.rs  sherpa.rs
crates/tt-dictate/src/audio/: capture.rs  device.rs  dsp.rs  mod.rs
crates/tt-doctor/: Cargo.toml
crates/tt-doctor/src/: lib.rs
crates/tt-exec/: Cargo.toml
crates/tt-exec/src/: lib.rs
crates/tt-graph/: Cargo.toml
crates/tt-graph/src/: analyzer.rs  format.rs  graph-template.html  labels.rs  ledger.rs  lib.rs  parser.rs  render.rs  sessions.rs  tools.rs  treemap.rs  types.rs
crates/tt-mcp/: Cargo.toml
crates/tt-mcp/src/: lib.rs  needs_you.rs
crates/tt-otel/: Cargo.toml
crates/tt-otel/src/: event_log.rs  layer.rs  lib.rs
crates/tt-slots/: Cargo.toml
crates/tt-slots/src/: clean.rs  envfile.rs  guards.rs  landed.rs  layout.rs  lib.rs  migrate.rs  ops.rs  pasted.rs  ports.rs  suggest.rs  template.rs
crates/tt-slots/tests/: landed_against_real_git.rs
crates/tt-store/: Cargo.toml
crates/tt-store/src/: attention.rs  collect.rs  events.rs  github.rs  lib.rs  model.rs  schema.rs  tasks.rs
crates/tt-tasks/: Cargo.toml
crates/tt-tasks/src/: clean.rs  envfile.rs  guards.rs  landed.rs  layout.rs  lib.rs  ops.rs  pasted.rs  ports.rs  staleness.rs  suggest.rs  template.rs
crates/tt-tasks/src/ops/: claims.rs  create.rs  init.rs  remove.rs  render.rs
crates/tt-tasks/tests/: landed_against_real_git.rs
crates/tt-vt/: CLAUDE.md  Cargo.toml
crates/tt-vt/src/: engine.rs  frame.rs  keymap.rs  lib.rs  osc52.rs  osc_color.rs  osc_notify.rs  search.rs  session.rs
docs/: AGENTBOARD-BRIDGE-SPEC.md  AGENTBOARD-PORT.md  AGENTBOARD-TMUX-SPEC.md  AGENTBOARD-UI-SPEC.md  AGENTBOARD-WATCHER-SPEC.md  CC-INFO-GATHERING-PLAN.html  CLAUDE-CODE-IDE.md  CODING-STANDARDS.md  CUTOVER.md  MIGRATION.md  PLUGIN-DISTRIBUTION.md  TROUBLESHOOTING.md  UI-SCREENSHOTS.md  implementation-notes.md
e2e/: README.md  ipc.ts  tsconfig.json  wdio.conf.ts
scripts/: dev-drive.mjs  dev-port.mjs  drive.mjs  e2e.mjs  errors.mjs  plugin-version-bump.mjs  plugin-version-bump.test.mjs  release-version-bump.mjs  release-version-bump.test.mjs  run.mjs  slot-port.d.mts  slot-port.mjs  slot-port.test.mjs  start.mjs  task-port.mjs  task-port.test.mjs  tsconfig.json
(+311 files in other folders)
