[workspace]
resolver = "2"
members = [
  # Shared crates (no Tauri dependency)
  "crates/tt-config",
  "crates/tt-exec",
  "crates/tt-git",
  "crates/tt-graph",
  "crates/tt-journal",
  # CLI crates
  "crates-cli/tt-cli",
  # Tauri-specific crates
  "crates-tauri/tt-app",
]

[workspace.dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
console = "0.15.11"
dirs = "6.0.0"
env_logger = "0.11.8"
inquire = "0.7.5"
log = "0.4.29"
regex = "1.11.1"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = "2.11.1"
tauri-build = "2.6.1"
thiserror = "2.0.17"
tokio = "1.48.0"

# Internal crates - shared
tt-config = { path = "crates/tt-config" }
tt-exec = { path = "crates/tt-exec" }
tt-git = { path = "crates/tt-git" }
tt-graph = { path = "crates/tt-graph" }
tt-journal = { path = "crates/tt-journal" }

[profile.release]
strip = false
