[workspace]
resolver = "2"
members = [
  # Shared crates (no Tauri dependency)
  "crates/tt-agentboard",
  "crates/tt-claude-code",
  "crates/tt-collect",
  "crates/tt-config",
  "crates/tt-doctor",
  "crates/tt-exec",
  "crates/tt-git",
  "crates/tt-graph",
  "crates/tt-journal",
  "crates/tt-mcp",
  "crates/tt-store",
  "crates/tt-vt",
  # CLI crates
  "crates-cli/tt-cli",
  # Tauri-specific crates
  "crates-tauri/tt-app",
]

[workspace.dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
console = "0.15.11"
dirs = "6.0.0"
env_logger = "0.11.8"
indexmap = "2.7.1"
inquire = "0.7.5"
# Builds libghostty-vt from source at the crate's pinned ghostty commit;
# requires zig 0.15.x on PATH (dotfiles functions/18-zig.sh installs it).
libghostty-vt = "0.2.0"
notify = "6.1.1"
portable-pty = "0.9.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
log = "0.4.29"
regex = "1.11.1"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = "2.11.1"
tauri-build = "2.6.1"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.17"
tokio = "1.48.0"
ratatui = "0.29.0"
wait-timeout = "0.2.1"

# Internal crates - shared
tt-agentboard = { path = "crates/tt-agentboard" }
tt-claude-code = { path = "crates/tt-claude-code" }
tt-collect = { path = "crates/tt-collect" }
tt-config = { path = "crates/tt-config" }
tt-doctor = { path = "crates/tt-doctor" }
tt-exec = { path = "crates/tt-exec" }
tt-git = { path = "crates/tt-git" }
tt-graph = { path = "crates/tt-graph" }
tt-journal = { path = "crates/tt-journal" }
tt-mcp = { path = "crates/tt-mcp" }
tt-store = { path = "crates/tt-store" }
tt-vt = { path = "crates/tt-vt" }

[profile.release]
strip = false
