[workspace]
resolver = "2"
members = [
  # Shared crates (no Tauri dependency)
  "crates/tt-agentboard",
  "crates/tt-claude-code",
  "crates/tt-collect",
  "crates/tt-config",
  "crates/tt-doctor",
  "crates/tt-exec",
  "crates/tt-git",
  "crates/tt-claude-sessions",
  "crates/tt-ide",
  "crates/tt-journal",
  "crates/tt-mcp",
  "crates/tt-otel",
  "crates/tt-slots",
  "crates/tt-store",
  "crates/tt-update",
  "crates/tt-vt",
  # CLI crates
  "crates-cli/tt-cli",
  # Tauri-specific crates
  "crates-tauri/tt-app",
]

[workspace.dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
console = "0.15.11"
dirs = "6.0.0"
indexmap = "2.7.1"
inquire = "0.7.5"
# Builds libghostty-vt from source at the crate's pinned ghostty commit;
# requires zig 0.15.x on PATH (dotfiles functions/18-zig.sh installs it).
libghostty-vt = "0.2.0"
notify = "6.1.1"
# Encodes the raw RGBA the system clipboard hands back into a real PNG — see
# `tt_slots::pasted::rgba_to_png`. Pinned to the same major the clipboard
# plugin's `image` (and muda/tray-icon) already pull in, so the app links one
# png, not two — 0.17 is build-time-only weight via tauri-codegen/ico.
png = "0.18"
portable-pty = "0.9.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
log = "0.4.29"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tauri = "2.11.1"
tauri-build = "2.6.1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.17"
tokio = "1.48.0"
# Instrumentation. `tracing` is the API every crate calls; the subscriber's
# `tracing-log` feature captures the `log::` macros still in the tree, so
# nothing goes dark while seams are converted to spans incrementally.
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "tracing-log"] }
ureq = { version = "2.12.1", default-features = false, features = ["json", "gzip", "native-tls"] }
native-tls = "0.2.14"
wait-timeout = "0.2.1"

# Internal crates - shared
tt-agentboard = { path = "crates/tt-agentboard" }
tt-claude-code = { path = "crates/tt-claude-code" }
tt-collect = { path = "crates/tt-collect" }
tt-config = { path = "crates/tt-config" }
tt-doctor = { path = "crates/tt-doctor" }
tt-exec = { path = "crates/tt-exec" }
tt-git = { path = "crates/tt-git" }
tt-claude-sessions = { path = "crates/tt-claude-sessions" }
tt-ide = { path = "crates/tt-ide" }
tt-journal = { path = "crates/tt-journal" }
tt-mcp = { path = "crates/tt-mcp" }
tt-otel = { path = "crates/tt-otel" }
tt-slots = { path = "crates/tt-slots" }
tt-store = { path = "crates/tt-store" }
tt-update = { path = "crates/tt-update" }
tt-vt = { path = "crates/tt-vt" }

[profile.release]
strip = false

# Dev builds must not ship a Debug-mode Zig parser: libghostty-vt-sys reads
# cargo's DEBUG env var to pick `zig build -Doptimize=...`, and Zig Debug
# parses ~3 orders of magnitude slower (saturates a core at ~130 KB/s of PTY
# output, which pegged hidden busy panes at 100% CPU despite render gating).
# `debug = false` makes cargo set DEBUG=false for just this package, so its
# build.rs falls through to ReleaseFast; the rest of the workspace stays debug.
[profile.dev.package.libghostty-vt-sys]
opt-level = 3
debug = false

# The Rust wrapper sits on the same hot path (per-chunk feed, cell/style
# access); keep it optimized alongside the Zig core it wraps.
[profile.dev.package.libghostty-vt]
opt-level = 3
debug = false
