[package]
name = "tt-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "ttr"
path = "src/main.rs"

[dependencies]
tt-agentboard = { workspace = true }
tt-config = { workspace = true }
tt-exec = { workspace = true }
tt-git = { workspace = true }
tt-graph = { workspace = true }
tt-journal = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
dirs = { workspace = true }
indexmap = { workspace = true }
env_logger = { workspace = true }
inquire = { workspace = true }
log = { workspace = true }
# ratatui: the agentboard sidebar TUI (`ttr agentboard tui`).
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# tokio: only for `ttr agentboard server` (HTTP listener + scan/git/emit tasks).
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "macros",
    "io-util",
    "signal",
] }

[dev-dependencies]
assert_cmd = "2.0.16"
chrono = { workspace = true }
predicates = "3.1.3"
tempfile = "3.14.0"
