[package]
name = "tt-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
tt-agentboard = { workspace = true }
tt-collect = { workspace = true }
tt-config = { workspace = true }
tt-exec = { workspace = true }
tt-journal = { workspace = true }
tt-mcp = { workspace = true }
tt-slots = { workspace = true }
tt-store = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
dirs = { workspace = true }
tt-otel = { workspace = true }
inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.14.0"
