[package]
name = "tt-app"
version = "0.1.0"
edition = "2024"
publish = false

# Produce a library for mobile support (Tauri mobile pattern)
[lib]
name = "tt_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-opener = { workspace = true }
tt-agentboard = { workspace = true }
tt-collect = { workspace = true }
tt-config = { workspace = true }
tt-doctor = { workspace = true }
tt-exec = { workspace = true }
tt-graph = { workspace = true }
tt-journal = { workspace = true }
tt-store = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt", "macros", "net", "io-util"] }

# WebdriverIO E2E testing plugins, gated behind the `wdio` feature so they are
# fully excluded from normal/release builds (`tauri build`). Enable only when
# building the app for E2E runs: `cargo build -p tt-app --features wdio`.
# tauri-plugin-wdio exposes the execute/mock IPC surface; -webdriver runs the
# in-app WebDriver server the @wdio/tauri-service embedded provider connects to.
tauri-plugin-wdio = { version = "1", optional = true }
tauri-plugin-wdio-webdriver = { version = "1", optional = true }

[features]
wdio = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[dev-dependencies]
tempfile = "3.14.0"
