[package]
name = "tt-app"
version = "0.1.0"
edition = "2024"
publish = false

# Produce a library for mobile support (Tauri mobile pattern)
[lib]
name = "tt_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-opener = { workspace = true }
tt-agentboard = { workspace = true }
tt-collect = { workspace = true }
tt-config = { workspace = true }
tt-doctor = { workspace = true }
tt-exec = { workspace = true }
tt-git = { workspace = true }
tt-claude-sessions = { workspace = true }
tt-ide = { workspace = true }
tt-journal = { workspace = true }
tt-mcp = { workspace = true }
tt-slots = { workspace = true }
tt-store = { workspace = true }
tt-update = { workspace = true }
tt-vt = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tt-otel = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
native-tls = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt", "macros", "net", "io-util"] }
# Socket Mode WebSocket for real-time Slack DM delivery. native-tls verifies
# against the OS trust store (matches tt-collect's ureq client), so networks
# that TLS-inspect with a corporate root CA (Zscaler and similar) are trusted —
# rustls's bundled webpki-roots ignores the OS store and fails under them.
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "handshake", "native-tls"] }
# Auth tokens for the per-terminal Claude Code IDE servers (see src/ide.rs).
uuid = { version = "1", features = ["v4"] }
# Loopback HTTP transport for the MCP server (see src/mcp_http.rs). HTTP/1.1
# only, and both halves: `server` for the one POST route on 127.0.0.1, `client`
# for `mcp_test_call`, which dials that same loopback route from Rust because
# the webview's own `fetch` carries an `Origin` the admission check refuses.
# **No TLS on either half** — plain HTTP to 127.0.0.1 and nowhere else — so the
# OS-trust-store rule that governs our outbound clients has nothing to apply to
# here. Extend `mcp_test_call` to reach any non-loopback or `https://` endpoint
# and that stops being true; configure native-tls/OS roots at that point.
# All of these already came in transitively via tauri, so this pulls no new
# crate into the build.
hyper = { version = "1", default-features = false, features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
http-body-util = "0.1"

# WebdriverIO E2E testing plugins, gated behind the `wdio` feature so they are
# fully excluded from normal/release builds (`tauri build`). Enable only when
# building the app for E2E runs: `cargo build -p tt-app --features wdio`.
# tauri-plugin-wdio exposes the execute/mock IPC surface; -webdriver runs the
# in-app WebDriver server the @wdio/tauri-service embedded provider connects to.
tauri-plugin-wdio = { version = "1", optional = true }
tauri-plugin-wdio-webdriver = { version = "1", optional = true }
trash = "5.2.6"

# Preview-screen capture (src/preview.rs): webkit2gtk is the same crate/
# version/feature set wry already links on Linux (additive features, one build
# graph instance — this adds no second WebKit), cairo-rs reads the snapshot
# surface's pixels. Both are meaningless off Linux, where `preview_capture`
# compiles to a stub.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0.1", features = ["v2_40"] }
cairo-rs = "0.18"

[features]
wdio = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[dev-dependencies]
tempfile = "3.14.0"

# Only for the terminal.rs unit test that spawns a real POSIX session leader
# (setsid via pre_exec) to exercise kill_session_stragglers end to end.
[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }
