[package]
name = "tt-agentboard"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# indexmap: the TS engine relies on JS `Map` insertion order (AgentTracker's
# priority tie-break in getState, and getAgents/getUnseen ordering). std HashMap
# is randomized and BTreeMap reorders by key; IndexMap preserves insertion order.
indexmap = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
# notify: fs-change accelerant so the bridge can trigger a low-latency rescan on
# journal writes. Polling stays the reliable path; this is an optional supplement,
# isolated in `fs_notify` and not used by the deterministic scan core.
notify = { workspace = true }
# rusqlite (bundled): read-only access to OpenCode's live SQLite DB. Bundled
# compiles SQLite from source — no system libsqlite3 dependency or version skew
# across dev/CI. First (and only) SQLite dep in the workspace.
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tt-exec = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
