[package]
name = "tt-agentboard"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# indexmap: the TS engine relies on JS `Map` insertion order (AgentTracker's
# priority tie-break in getState, and getAgents/getUnseen ordering). std HashMap
# is randomized and BTreeMap reorders by key; IndexMap preserves insertion order.
indexmap = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
# jsonc-parser: `.claude/launch.json` is Claude Desktop's, written in the same
# JSON-with-comments dialect as VS Code's launch.json — see `launch.rs`.
jsonc-parser = { workspace = true }
log = { workspace = true }
# notify: fs-change accelerant so the bridge can trigger a low-latency rescan on
# journal writes. Polling stays the reliable path; this is an optional supplement,
# isolated in `fs_notify` and not used by the deterministic scan core.
notify = { workspace = true }
# rusqlite (bundled): read-only access to OpenCode's live SQLite DB. Bundled
# compiles SQLite from source — no system libsqlite3 dependency or version skew
# across dev/CI. First (and only) SQLite dep in the workspace.
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# tt-claude-code: the shared Claude Code transcript schema + parse/accessors the
# claude-code watcher enriches from (status/thread/tool/loop/usage derivation).
tt-claude-code = { workspace = true }
# tt-config: the engine loads theme/preferredEditor from (and persists theme to)
# the shared settings file, identically for both hosts.
tt-config = { workspace = true }
tt-exec = { workspace = true }
# tt-tasks: reads a worktree's `.tt-task` marker so the diff pane's "vs
# main" mode compares against the task's actual creation base ref, not always
# main.
tt-tasks = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
