[package]
name = "tt-claude-sessions"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# The canonical Claude Code transcript schema + parse/title/usage projections.
tt-claude-code = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
