[package]
name = "tt-config"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Test-only: derives the settings JSON schema for the camelCase drift guard.
schemars = { workspace = true }
tempfile = "3.14.0"
