[package]
name = "tt-doctor"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tt-agentboard = { workspace = true }
tt-config = { workspace = true }
tt-dictate = { workspace = true }
tt-exec = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
