[package]
name = "tt-exec"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wait-timeout = { workspace = true }

[dev-dependencies]
# Proves the spawn spans actually reach the on-disk event log. Acyclic:
# tt-telemetry depends on tt-config, never on tt-exec.
tt-telemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3.14.0"
