[package]
name = "tt-graph"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
