[package]
name = "tt-otel"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tt-config = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
