[package]
name = "tt-slots"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tt-config = { workspace = true }
tt-exec = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
