[package]
name = "tt-slots"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = { workspace = true }
# `kill(2)` on a process group, for clearing a stale dev server off a slot's
# claimed port (`ports::stop_listeners`). Shelling out to `kill(1)` instead
# would be ambiguous: procps parses a leading `-<pgid>` as a signal number.
libc = { workspace = true }
png = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tt-config = { workspace = true }
tt-exec = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
