[package]
name = "tt-store"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Local-calendar-day arithmetic for `local_day_bounds` — the window that scopes
# `replace_events_for_source`'s delete. It lives here so every writer computes
# it identically; see that function's doc.
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Warn on an event row whose stored time no longer parses (a hand-edit) rather
# than failing the whole query — see `query_events`.
tracing = { workspace = true }
# Central resolver for the (optionally task-scoped) tt.db path.
tt-config = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
